# venti

./: .env.example  .gitignore  README.md  home-assistant.sh  justfile  pyproject.toml  pyrightconfig.json  run.sh  setup.sh  validate_setup.py
.zed/: settings.json
agent/: plan.md  wifi.md
docs/: Automation.md  Introduction.md  WIHardware.md  index.md  todo.md
docs/micropython/: first-time-setup.md  home-assistant.md  index.md  setup.md
examples/micropython/: blinky.py  hello-home-assistant.py  hello-wifi.py  pot-fan.py
scripts/: README.md  esp32-setup.sh  home-assistant.sh  pc-setup.sh  run.sh
skills/: consolidate-instructions.md
