[project]
name = "venti"
version = "0.1.0"
description = "Window fans automatically controlled by air quality sensors"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "micropython-esp32-stubs",
    "ruff",
]

[tool.pyright]
include = ["examples", "docs"]
typeCheckingMode = "basic"
stubPath = ""

[tool.basedpyright]
include = ["examples", "docs"]
typeCheckingMode = "basic"
stubPath = ""

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
